Added calf and quad exercises

--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
         <div id="calfquad"><h2>Calves and Quad</h2></div>
         <div id="hamstring"><h2>Hamstring</h2></div>
     </div>
+    <div id="exercise" style="display:none">
+        <h2 id="rep"></h2>
+        <h2 id="next">Next</h2>
+    </div>
 </body>
 </html>
