See if calf and quads are finished.

--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,13 @@
 <body>
     <div id="choose">
         <h1>Choose Activity</h1>
-        <div id="calfquad"><h2>Calves and Quad</h2></div>
-        <div id="hamstring"><h2>Hamstring</h2></div>
+        <div id="calfquad"><h1>Calves and Quad</h1></div>
+        <div id="hamstring"><h1>Hamstring</h1></div>
     </div>
     <div id="exercise" style="display:none">
-        <h2 id="rep"></h2>
-        <h2 id="next">Next</h2>
+        <h1 id="rep"></h1>
+        <h1 id="seconds"></h1>
+        <h1 id="next">Next</h1>
     </div>
 </body>
 </html>
