--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <script src="/js/site.js"></script>
 </head>
 <body>
+    <audio src="media/next.wav" id="nextsound" autostart="false"></audio>
     <div id="choose">
         <h1>Choose Activity</h1>
         <div id="calfquad"><h1>Calves and Quad</h1></div>
