So you have to play the sound file by user action first in Android Chrome.

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
         <h1>Choose Activity</h1>
         <div id="calfquad"><h1>Calves and Quad</h1></div>
         <div id="hamstring"><h1>Hamstring</h1></div>
+        <div id="play"><h1>Play</h1></div>
     </div>
     <div id="exercise" style="display:none">
         <h1 id="rep"></h1>
